[package]
name = "os_signals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = { version = "0.3" }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1.28", features = ["full"] }
futures = { version = "0.3" }
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
envy = { version = "0.4" }