[package]
name = "os_signals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# termination_signal = { path = "../termination_signal" }
termination_signal = "0.1.1"
tokio = { version = "1.28", features = ["full"] }
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
envy = { version = "0.4" }